# coalesce-program

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  mutants.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: coverage.yml  fuzz.yml  tla.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_account_deserialization.rs  fuzz_borrow_repay_cycle.rs  fuzz_deposit_withdraw_roundtrip.rs  fuzz_differential_interest.rs  fuzz_fee_calculations.rs  fuzz_instruction_parsing.rs  fuzz_interest_accrual.rs  fuzz_market_state_consistency.rs  fuzz_protocol_sequence.rs  fuzz_scaled_balance_invariants.rs  fuzz_settlement_factor.rs  fuzz_state_transitions.rs  fuzz_vault_solvency.rs
fuzz/seeds/: README.md
monitoring/: Cargo.toml  README.md
monitoring/src/: invariants.rs  main.rs  types.rs
scripts/: capture_transactions.sh  convert_to_regression.py  create_static_seeds.py  fuzz_coverage_loop.sh  generate_fuzz_seeds.py
specs/: CoalesceFi.tla  MC.cfg
src/: constants.rs  error.rs  lib.rs
src/logic/: events.rs  haircuts.rs  interest.rs  kani_proofs.rs  mod.rs  validation.rs
src/processor/: borrow.rs  claim_haircut.rs  close_lender_position.rs  collect_fees.rs  create_market.rs  deposit.rs  force_claim_haircut.rs  force_close_position.rs  initialize_protocol.rs  mod.rs  re_settle.rs  repay.rs  repay_interest.rs  set_admin.rs  set_blacklist_mode.rs  set_borrower_whitelist.rs  set_fee_config.rs  set_pause.rs  set_whitelist_manager.rs  withdraw.rs  withdraw_excess.rs
src/state/: borrower_whitelist.rs  haircut_state.rs  lender_position.rs  market.rs  mod.rs  protocol_config.rs
tests/: README.md  account_validation_tests.rs  adversarial_clock_tests.rs  bpf_integration_tests.rs  chaos_engineering_tests.rs  compute_unit_tests.rs  concolic_tests.rs  coverage_gap_tests.rs  coverage_targeted_tests.rs  cross_compilation_tests.rs  cu_benchmark.rs  determinism_tests.rs  economic_attack_vector_tests.rs  economic_simulation_tests.rs  fuzz_bpf_entrypoint.rs  gas_metering_tests.rs  historical_replay_tests.rs  integration_gap_tests.rs  interest_overflow_protection_tests.rs  invariant_monitor_tests.rs  invariant_preserving_fuzz_tests.rs  memory_layout.rs  metamorphic_tests.rs  multi_market_tests.rs  mutation_killers.rs  mutation_verification.rs  non_tautological_verification_tests.rs  property_tests.rs  property_tests_logic.rs  refinement_proof_tests.rs  regression_tests.rs  security_account_confusion.rs  security_arithmetic_overflow.rs  security_audit_framework_tests.rs  security_authorization.rs  security_cpi_injection.rs  security_error_paths.rs  security_fixes_tests.rs  security_input_validation.rs  security_pda_validation.rs  (+32 more)
tests/common/: interest_oracle.rs  math_oracle.rs  mod.rs
